--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yelpcamp",
   "version": "1.0.0",
-  "description": "<!-- ![Quizzical Demo Gif](https://raw.githubusercontent.com/pedromorelli96/Quizzical/main/QuizzicalDemo.gif) -->",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +17,9 @@
     "express-session": "^1.17.3",
     "joi": "^17.8.3",
     "method-override": "^3.0.0",
-    "mongoose": "^7.0.0"
+    "mongoose": "^6.10.2",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2"
   }
 }
