--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.36.0"
   }
 }
